# Logger

./: CMakeLists.txt  cmake-pm
app/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt  mainpage.md
include/logger/: logger.h  message.h  simple.h  writer.h
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  logger.cpp  message.cpp  simple.cpp
test/: CMakeLists.txt  exampletest.tpp
