add_executable("${CMAKE_PROJECT_NAME}-app" app.cpp)
set(GENERAL_COMPILE_FLAGS "-Wall;-Wextra")
set(DEBUG_COMPILE_FLAGS "${GENERAL_COMPILE_FLAGS};-g;-O0")
set(RELEASE_COMPILE_FLAGS "${GENERAL_COMPILE_FLAGS};-O3")
target_compile_options("${CMAKE_PROJECT_NAME}-app" PRIVATE "$<$<CONFIG:DEBUG>:${DEBUG_COMPILE_FLAGS}>")
target_compile_options("${CMAKE_PROJECT_NAME}-app" PRIVATE "$<$<CONFIG:RELEASE>:${RELEASE_COMPILE_FLAGS}>")
target_link_libraries("${CMAKE_PROJECT_NAME}-app" PRIVATE ${LIBRARY_LIST})
